# aoc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  update_aoc_stars.yml
2015/: README.md
2015/day1/: p1.py  p2.py
2015/day10/: p1.py  p2.py
2015/day11/: p1.py
2015/day2/: p1.py  p2.py
2015/day3/: p1.py  p2.py
2015/day4/: p1.py  p2.py
2015/day5/: p1.py  p2.py
2015/day6/: p1.py  p2.py
2015/day7/: p1.py
2015/day8/: p1.py  p2.py
2015/day9/: p1.py  p2.py
2017/: day1.cpp  day2.cpp  day3.cpp  template.cpp
2023/: CMakeLists.txt
2023/cmake/: test_util.cmake
2023/include/aoc/2023/: get_char.hpp
2023/src/: day1.cpp  day10.cpp  day14.cpp  day18.cpp
2023/src/lib/: get_char.cpp  hash.cpp
2024/: CMakeLists.txt
2024/cmake/: dependencies.cmake  test_util.cmake
2024/include/aoc/2024/: pos.h  split.h  trie.h
2024/src/: CMakeLists.txt  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  day_template.cpp
2024/src/lib/: CMakeLists.txt  split.cpp
cmake/: test_util.cmake
src/: CMakeLists.txt
src/2023/: CMakeLists.txt  day11.cpp  day12.cpp  day16.cpp  day17.cpp  day21.cpp  day3.cpp  day8.cpp
src/2023/lib/: maths.cpp
src/2024/: CMakeLists.txt  day1.cpp  day2.cpp  day3.cpp  day4.cpp  day_template.cpp
